--- a/modules/ROOT/pages/faq.adoc
+++ b/modules/ROOT/pages/faq.adoc
@@ -1,33 +1,114 @@
 = Frequently Asked Questions
 
 == Practical
-=== When will it be mandatory in Germany
+=== When will B2B e-invoicing become mandatory in Germany
 
+Reading : as of 2025, Writing: as of 2027, for some as of 2028
 
 .Matrix © 2024 Andreas Pelekies validool.org
 image::Tabelle_Zeitlicher_Ablauf.svg[Matrix © 2024 Andreas Pelekies validool.org]
-B2G is already, B2B
 
-The mediation committee will meet on 21.02.2024 and afterwards the Federal Countil (Bundesrat) will have to agree, so the date when it could be decided will be
-22.03.2024. https://www.bundestag.de/resource/blob/941108/fe2650c9b2fbfdf2a274000936b337df/sitz_pdf_24.pdf Please note that 2025 was a target date and the Federal Countil requested two more years
 
-https://dip.bundestag.de/vorgang/gesetz-zur-st%C3%A4rkung-von-wachstumschancen-investitionen-und-innovation-sowie-steuervereinfachung/303318?term=Wachstumschancengesetz&f.wahlperiode=20&rows=25&pos=1
-details
-https://www.heise.de/hintergrund/Pflicht-zur-E-Rechnung-im-XML-Format-Das-ist-der-Status-quo-9593920.html
-(paywall) or
-https://medium.com/@jochen.staerk/why-and-how-germany-bans-b2b-paper-invoices-a4c7977f314a
+=== When will B2G e-invoicing become mandatory in Germany
+On federal level, as of 1000€ it already is.
+Regional authorities have the following deadlines
 
-=== How do I know it's ZUGFeRD/how many do I already have/what is the market share?
+Information may not be accurate:
+[cols="1,1,1"]
+|===
+| State | Mandatory B2G e-invoicing since | Portal
 
-=== Which formats are eligible?
+| Schleswig Holstein
+| N/A
+| N/A
 
-For B2G and B2B both EN16931-2 XML formats, UBL and CII, are eligible, for ZUGFeRD/Factur-X you have to use CII
+|Mecklenburg Vorpommern
+|01.04.2023
+|OZGRE
+
+|Hamburg
+|N/A
+|N/A
+
+|Bremen
+|27.11.2020
+|zErika
+
+|Berlin
+|31.12.2022
+|OZGRE
+
+|Brandenburg
+|N/A
+|OZGRE
+
+|Hessen
+|18.04.2024
+|N/A
+
+|Bayern
+|N/A
+|N/A
+
+|Thüringen
+|N/A
+|OZGRE
+
+|Niedersachsen
+|N/A
+|N/A
+
+|Nordrhein-Westfalen
+|yes
+|NRW Portal
+
+|Rheinland-Pfalz
+|01.01.2024
+|RLP portal
+
+|Saarland
+|01.01.2022
+|RLP portal
+
+|Baden-Würtemberg
+|01.01.2022
+|ZRE (BW)
+
+|Sachen
+|N/A
+|OZGRE
+|===
+
+
+ link:https://www.verband-e-rechnung.org/xrechnung/[Source]
+
+=== How do I know it's ZUGFeRD/Factur-X/how many do I already have/what is the market share?
+ZUGFeRD/Factur-X are ordinary PDF files, some readers may signal e.g. with a disclaimer on a blue background that
+it's a PDF/A file, which may be a hint, but the "smoking gun" is a embedded .XML file like
+factur-x.xml, ZUGFeRD-invoice.xml, zugferd-invoice.xml or xrechnung.xml.
+Embedded files may be shown as "paperclip" symbol, unfortunately some PDF readers like
+web browsers don't support embedded files.
+
+If you want to check a local directory structure you can e.g. use the open source
+link:https://www.mustangproject.org/kommandozeile/?lang=de#count[Mustangproject]
+commandline "metrics" feature. Unfortunately, to this day no study is known to elaborate
+on the market share of ZUGFeRD/Factur-X invoices, i.e. which percentage of PDF invoices
+on average contain ZUGFeRD/Factur-X data.
+
+=== Which formats are eligible? Why only them?
+
+For B2G and B2B both EN16931-2 XML formats, UBL and CII, are eligible,
+for B2B you can additionally use CII based ZUGFeRD/Factur-X.
+
+Why UBL and CII is explained in EN16931-2, https://www.beuth.de/de/technische-regel/din-cen-ts-16931-2/274991011
+why CII developed in the first place after UBL is explained on https://www.oasis-open.org/committees/download.php/57887/UBL%20and%20CEFACT%20update%20-%2020160407.pdf
+and that Factur-X is allowed has been laid down in https://www.dstv.de/wp-content/uploads/2023/10/BMF_2023-0922192-R.pdf
+
 
 === Can I just convert from one XML format to the other?
-Theoretically yes, but there is no open source XSLT and only  one open source Java
-link:https://github.com/phax/en16931-cii2ubl[library] which only converts in one direction, from CII to UBL
+Theoretically yes, but there is currently only one open source Java
+link:https://github.com/phax/en16931-cii2ubl[library] which only converts in only one direction, from CII to UBL
 
-== What do I have to archive how?
 
 === How can I check if a file is valid
 [#validators]
@@ -44,34 +125,37 @@ For semantic correctness you may want to refer to a link:index.adoc#_display[vie
 The sender
 
 
-== Legal
-=== GoBD
+=== What do I have to consider when sending/receiving electronic invoices
 
-Principles for the proper keeping and storage of books,records and documents in electronic form and fordata access
+In germany, in one word: GoBD.
+There are
+Principles for the proper keeping and storage of books,records and documents in electronic form and for data access
 
+link:https://ao.bundesfinanzministerium.de/ao/2021/Anhaenge/BMF-Schreiben-und-gleichlautende-Laendererlasse/Anhang-64/anhang-64.html[
 Grundsätze zur ordnungsmäßigen Führung und Aufbewahrung von Büchern,
 Aufzeichnungen und Unterlagen in elektronischer Form sowie zum
-Datenzugriff
+Datenzugriff].
 
-https://ao.bundesfinanzministerium.de/ao/2021/Anhaenge/BMF-Schreiben-und-gleichlautende-Laendererlasse/Anhang-64/anhang-64.html
+Which requires
 
-Muster-Verfahrensdokumentation zum ersetzenden Scannen
-https://www.bstbk.de/downloads/bstbk/steuerrecht-und-rechnungslegung/fachinfos/BStBK_Muster-VerfD-ersetzendes-Scannen_v2.0-2019-11-29.pdf
+Please note that the process documentation example for paper-replacing scans
+link:https://www.bstbk.de/downloads/bstbk/steuerrecht-und-rechnungslegung/fachinfos/BStBK_Muster-VerfD-ersetzendes-Scannen_v2.0-2019-11-29.pdf[Muster-Verfahrensdokumentation zum ersetzenden Scannen
+] is only a part of the complete process documentation of which you will find an example
+in the
+link:https://www.awv-net.de/upload/pdf/Belegablage_V1_20151026.pdf[Muster-Verfahrensdokumentation für Belegablage]
 
-Muster-Verfahrensdokumentation für Belegablage
-https://www.awv-net.de/upload/pdf/Belegablage_V1_20151026.pdf
-nachschiebe
 
-== B2G
 === How can I automatically submit german B2G invoices
 
 Kosit, the authority for government invoices, so to speak, has joined the
-EDI network Peppol and discontinued API access to the ZRE.
-to the ZRE. This means that the only way to submit government invoices in
+EDI network Peppol and discontinued the existing API access to the ZRE.
+
+This means that the only way to submit government invoices in
 Germany is completely automated is via Peppol. You
 not only still have to address the Peppol invoice to the correct portal
 to the correct portal, you also have to register with each portal beforehand
 (at least automated) beforehand.
+
 === XRechnung Referenzprofil CII
 
 XRechnung is defined for UBL and UN/CEFACT, but ZUGFeRD itself in the
@@ -79,23 +163,16 @@ XRechnung reference profile is exclusively a UN/CEFACT format. In the
 review, the corresponding mention (section 3.2.4 on p. 13) was considered sufficient.
 was considered sufficient.
 
-=== XR Version gültig
 
-https://www.xoev.de/xrechnung-16828
+=== Which version of which standard do I have to use?
+CII 1.0, incorrectly a.k.a. "2016b" or UBL 2.1,
+ZUGFeRD 2.x (2.3.1 is the newest) and
+XRechnung 3.0.1 (updates once a year).
 
-=== How do I write invoices abroad?
- http://web.archive.org/web/20220102161033/https://www.psp.eu/media/allgemein/eu-compendium_e-invoicing_and_retention.pdfhttp://web.archive.org/web/20220102161033/https://www.psp.eu/media/allgemein/eu-compendium_e-invoicing_and_retention.pdf https://ec.europa.eu/digital-building-blocks/wikis/display/HOME/2021+eInvoicing+Country+factsheets https://www.signaturportal.de/tutorial,62.html
 
-=== What were the changes in the latest ZUGFeRD/Factur-X version?
-
-=== How to calculate and round invoices? How many decimals are allowed?
-
-https://www.beuth.de/de/norm/din-en-16931-1/327729047
-
-== B2B
 === Continous Transaction Control (CTC) (USt-Meldesystem)
 
-There is a whole range of Continous Transaction Control (CTC) systems, in german called VAT reporting system types (Umsatzsteuer-Meldesystem) (cf
+There are different types range of Continous Transaction Control (CTC) systems, in german called VAT reporting system types (Umsatzsteuer-Meldesystem) (cf
 Kollmann
 https://www.pagero.com/downloads/documents/compliance/Next_Generation_Model-Decentralised_CTC_and_Exchange_v1.pdf
 p.6: Italy is Centralized Clearance, EU~France is EESPA,
@@ -114,7 +191,7 @@ https://www.edicomgroup.com/en_US/news/13617-france-prepares-for-mandatory-b2b-e
 Germany
 https://www.verband-e-rechnung.org/pdfs/VeR-Studie_Clearance_2020.pdf
 
-=== Europa
+=== Europa/ViDA
 
 With the EU draft directive link:https://audiovisual.ec.europa.eu/en/topnews/M-009199[Vat in the Digital Age (ViDA)]
  is being worked on,
@@ -124,11 +201,9 @@ And ViDA wants to build on the B2G e-invoicing standard EN16931.
 
 == Background
 
-=== What is a profile, which ones exist and why?
-
 === When I receive a Factur-X, can I book automatically?
 
-Unfortunately no. E.g. using link:#validators[validators] you may be able to confirm the invoice is calculated
+Usually not. E.g. using link:#validators[validators] you may be able to confirm the invoice is calculated
 correctly but you can only book automatically (german: Dunkelbuchung) in ideal circumstances: e.g. if you already
 entered the order in your system and you have confirmation about the incoming goods in your system and the invoice
 refers to the order you will be able to confirm that the invoice also __matches__ your order. Together with
@@ -154,28 +229,6 @@ https://www.ferd-net.de/aktuelles/meldungen/rueckblick-auf-die-sitzung-des-ferd-
 
 
 
-=== PDF
-
-Converting any PDF input to PDF/A-3 is out of scope for the
-mustangproject tool&library, because it is too complex, you can not just
-filter out some things, usually you need to completely rebuild a valid
-pdf/a, ghostscript is a very good and AFAIK the only open source
-solution which can handle that (see
-https://github.com/ZUGFeRD/mustangproject/issues/164#issuecomment-640046774).
-
-Please note that it’s out of scope for the tool&library does not mean
-that it’s out of scope for mustang server, which could use ghost4j for
-that, actually I do have some ghost4j-questions.
-
-=== Ghostscript, general
-
-Ghostscript did an amazing work years ago already and implemented the
-functionality (Ext_Metadata
-https://www.ghostscript.com/doc/VectorDevices.htm#Extensions) which was
-required to generate proper ZUGFeRD PDFs. They did not announce it very
-much but https://bugs.ghostscript.com/show_bug.cgi?id=696472 gives you a
-start in case you are interested.
-
 === Netto
 
 §6.4.3.1.1
@@ -189,27 +242,9 @@ Minus. Typecode for cancellation invoice I mean 384, there is an
 official ZUGFeRD example.
 
 
-=== Schematron
-
-if you e.g. want to check the CEN schematron you might have to get that
-schematron, java, saxon, and the ``ISO Schematron'' transformation and
-run saxon with the ISO Schematron to create a XSLT-File from the
-schematron file and then run this generated XSLT file on your input.
-There is a description for mac on
-https://blog.eight02.com/2011/05/validating-xml-with-iso-schematron-on.html
-
-
-=== Why the two formats UBL and CII
-Why UBL and CII is explained in EN16931-2, https://www.beuth.de/de/technische-regel/din-cen-ts-16931-2/274991011
-why CII developed in the first place after UBL is explained on https://www.oasis-open.org/committees/download.php/57887/UBL%20and%20CEFACT%20update%20-%2020160407.pdf
-and that Factur-X is allowed has been laid down in https://www.dstv.de/wp-content/uploads/2023/10/BMF_2023-0922192-R.pdf
 
 
 === Decimals
-
-As far as I know, quantities and prices may have four digits (see theFactur-X specification 1.0.50, section 7.1.5), the item must be rounded to two-digit sums
-be rounded to two-digit totals - and the sum of the items with the sameitems with the same VAT rate leads to the two-digit VAT amount for this rate.VAT amount for this rate. See also EN16931-1 chapter 6.5.12,
-where, interestingly, net prices are quoted in two digits.
 
 === Order-X
 
@@ -217,29 +252,13 @@ Public review 1
 https://www.ferd-net.de/aktuelles/meldungen/public-review-des-entwurfs-fuer-order-x-hat-begonnen-und-laeuft-bis-ende-september-2020.html
 
 
-=== OpenSource
+=== What OpenSource tools/libraries exist?
 
 I have tried to list all source solutions on link:index.adoc[this page]
 
-=== How to write ZUGFeRD
-
-==== Requirements
-
-==== How can I check
-
-=== What is the content-difference between ZUGFeRD/Factur-X and XRechnung
-
-=== Where can I ask questions
-
-=== How can I read
-
-=== Where do I get examples
 
 
 
-=== Attribute values
-
-The possible Attribute values are shared between UBL and CII, 18 of ~20 lists are available in link:https://ec.europa.eu/digital-building-blocks/sites/display/DIGITAL/Registry+of+supporting+artefacts+to+implement+EN16931[version 12 here].
 
 
 === Where do I get schema files/further info
@@ -247,25 +266,28 @@ The possible Attribute values are shared between UBL and CII, 18 of ~20 lists ar
 Schema, Schematron, Samples, Spec, Reference and Codelists are available
 via the ZF Infopaket https://www.ferd-net.de/ZUGFeRD-Download
 
-=== What is the difference between Factur-X and ZUGFeRD
-
-Factur-X 1.0.50 is the French and international name of ZUGFeRD2.1 The Factur-X file name (factur-x.xml) and metadata (RDF metadatawith the namespace prefix "fx") are preferred since ZUGFeRD 2.1.
+The possible Attribute values are shared between UBL and CII, 18 of ~20 lists are also separately available in link:https://ec.europa.eu/digital-building-blocks/sites/display/DIGITAL/Registry+of+supporting+artefacts+to+implement+EN16931[version 12 here].
 
 
-=== How invoices are calculated
 
 The calculation of electronic invoices is standardized within the framework of EN16931-1which can be obtained free of charge online, in Germany in the shop of the
 store of the DIN-affiliated Beuth publishing house.
 https://www.beuth.de/en/standard/din-en-16931-1/314992770
 
 
-=== Can I use any PDF as basis for a ZUGFeRD/Factur-X
-ZUGFeRD is based on archivable (PDF/A) PDFs that embed all the data required fordata required for display, such as fonts.A free
-possibility to convert "normal" PDF files is, for example, Ghostscript.Ghostscript.
+As far as I know, quantities and prices may have four digits (see theFactur-X specification 1.0.50, section 7.1.5), the item must be rounded to two-digit sums
+be rounded to two-digit totals - and the sum of the items with the sameitems with the same VAT rate leads to the two-digit VAT amount for this rate.VAT amount for this rate. See also EN16931-1 chapter 6.5.12,
+where, interestingly, net prices are quoted in two digits.
 
 
-=== How does a ZUGFeRD-/Facur-X file look like
+=== What is the difference between Factur-X and ZUGFeRD
 
-Apart from the identification in the metadata, for example, in the
-Adobe Reader, for example, a ZUGFeRD file is identified by a reference to PDF-A and the
-paperclip symbol with the embedded file zugferd-invoice.xml orfactur-x.xml can be seen.
+Factur-X 1.0.50 is the French and international name of ZUGFeRD2.1 The Factur-X file name (factur-x.xml) and metadata (RDF metadatawith the namespace prefix "fx") are preferred since ZUGFeRD 2.1.
+
+
+=== What is the difference between XRechnung and ZUGFeRD/Factur-X
+
+=== What is the difference between PDF and PDF/A
+
+
+
